gitops/manifests/homeassistant/otbr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otbr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: otbr
  template:
    metadata:
      labels:
        app: otbr
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3s
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: otbr
          image: openthread/border-router:latest
          securityContext:
            capabilities:
              add: [NET_ADMIN]
          volumeMounts:
            - name: data
              mountPath: /data
            - name: tun
              mountPath: /dev/net/tun
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: otbr
        - name: tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
---
apiVersion: v1
kind: Service
metadata:
  name: otbr
spec:
  selector:
    app: otbr
  ports:
    - name: rest
      port: 8080
      targetPort: 8080
