gitops/manifests/homeassistant/homeassistant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:stable
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: config
              mountPath: /config
            - name: config-overlay
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              memory: 1536Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant
        - name: config-overlay
          configMap:
            name: homeassistant-config
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - port: 8123
      targetPort: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: homeassistant
      port:
        number: 8123
  tls:
    - hosts:
        - homeassistant
